@@ -14,4 +14,4 @@ case ${1} in
 		;;
 esac
 
-/bin/plymouth --newroot=${rootmnt}
+/usr/bin/plymouth --newroot=${rootmnt}
