@@ -8,7 +8,7 @@ fi
 
 log_begin_msg_post ()
 {
-	/bin/plymouth update --status="${@}" || true
+	/usr/bin/plymouth update --status="${@}" || true
  }
 
 log_end_msg_post ()
@@ -18,7 +18,7 @@ log_end_msg_post ()
 
 log_action_begin_msg_post ()
 {
-	/bin/plymouth update --status="${@}" || true
+	/usr/bin/plymouth update --status="${@}" || true
 }
 
 log_action_end_msg_post ()
@@ -28,10 +28,10 @@ log_action_end_msg_post ()
 
 log_action_msg_post ()
 {
-	/bin/plymouth update --status="${@}" || true
+	/usr/bin/plymouth update --status="${@}" || true
 }
 
 log_daemon_msg_post ()
 {
-	/bin/plymouth update --status="${@}" || true
+	/usr/bin/plymouth update --status="${@}" || true
 }
