@@ -14,4 +14,4 @@ prereqs)
         ;;
 esac
 
-/bin/plymouth quit
+/usr/bin/plymouth quit
