@@ -1,7 +1,7 @@
-bin
+usr/bin
 etc/plymouth
 lib/systemd
-sbin
+usr/sbin
 usr/lib/*/plymouth/*-initrd
 usr/lib/*/plymouth/details.so
 usr/lib/*/plymouth/renderers/drm.so
