@@ -14,11 +14,14 @@ plymouth (0.9.4-2) UNRELEASED; urgency=medium
     ourself but update the maintainer scripts to mimic what it's doing.
   * debian/rules: Drop dh_strip override, plymouth-dbg is gone for at least
     one release and we don't need the migration bits to the -dbgsym package
+  * Move everything from / to /usr now that the later is mounted at early
+    boot, add compatibility symlinks for the executable in case the system is
+    not migrated to usr-merge.
 
   [ Alper Nebi Yasak ]
   * Include less modules when appropriate. (Closes: #940014)
 
- -- Laurent Bigonville <bigon@debian.org>  Fri, 24 Jan 2020 06:37:44 +0100
+ -- Laurent Bigonville <bigon@debian.org>  Fri, 24 Jan 2020 07:20:23 +0100
 
 plymouth (0.9.4-1.1) unstable; urgency=medium
 
